<resources>
    <!-- activity_filter -->
    <string name="radioType">Type</string>
    <string name="radioSensor">Sensor</string>
    <string name="lblDataList">Data list :</string>
    <string name="btnAddData">Add to current data :</string>
    <string name="btnRemoveData">Remove from current data :</string>
    <string name="lblStartDate">Start date :</string>
    <string name="lblEndDate">End date :</string>
    <string name="datePattern">Date Pattern : dd/MM/yyyy-HH:mm</string>
    <string name="lblCurrentData">Current data:</string>

    <!-- activity_selection -->
    <string name="selected_graph">No Graph Selected</string>
    <string name="action_settings">Settings</string>
    <string name="btnZoomAdd">+</string>
    <string name="txtZoom">Zoom :</string>
    <string name="btnZoomLess">-</string>
    <string name="txtMeanInit">0</string>
    <string name="txtMean">Mean :</string>
    <string name="txtDeviationInit">0</string>
    <string name="txtDeviation">Standard Deviation :</string>
    <string name="txtMaxValueInit">0</string>
    <string name="txtMaxValue">Maximal Value :</string>
    <string name="txtMinValueInit">0</string>
    <string name="txtMinValue">Minimal Value :</string>
    <string name="menuList">List</string>
    <string name="menuFilter">Filter</string>
    <string name="menuCurve">Curve</string>
    <string name="btnExportPDF">Export to PDF</string>
    <string name="btnExportPNG">Export to PNG</string>
    <string name="btnExportCSV">Export to CSV</string>
    <string name="btnCreate">Create a new graph</string>
    <string name="txtName">Name</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="modalTextBoxTitle">Choose a name :</string>
    <string name="appName">Mobile Différe</string>
    <string name="logo">Main Logo</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="SelectionActivity">Selection Page</string>
    <string name="CurveActivity">Curve Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="goToFilter">Please go to filter page before.</string>
</resources>