<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/ibtnSelect"
            android:src="@drawable/ic_ibtnselect"
            android:scaleType="fitCenter"
            app:backgroundTint="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtName" />

    <TextView
            android:text="@string/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ibtnSelect"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    <Button
            android:text="@string/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEdit"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@color/prune"
            android:textColor="@color/light_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtName"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:text="@string/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            app:backgroundTint="@color/prune"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEdit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>