<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tblExport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/lstCurve"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/tblExport"
            app:layout_constraintTop_toBottomOf="@+id/lstCurve">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/btnExportPDF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnExportPDF" />

            <Button
                    android:text="@string/btnExportPNG"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnExportPNG" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/btnExportCSV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnExportCSV" />

            <Button
                    android:text="@string/btnImport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnImport"
                    tools:visibility="visible" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/menu_main"
            app:itemBackground="@android:color/holo_purple"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>